fix display on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -72,3 +72,39 @@ body {
     background-color: azure;
     opacity: 80%;
 }
+
+@media only screen and (max-width: 768px) and (min-width: 576px) {
+    #skills, #projects{
+        width: 400px;
+        background-color: rgba(248, 249, 250);
+        padding: 40px;
+        margin-bottom: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+    }
+
+    .mobile {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .card {
+        width: 300px;
+        margin-left: -80px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    #skills, #projects{
+        width: 400px;
+        background-color: rgba(248, 249, 250);
+        padding: 40px;
+        margin-bottom: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+    }
+}
+
